fix issue in modificaRoteamento